<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tblLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#1c1d1f"
            android:gravity="center">

            <TextView
                android:id="@+id/txtCalculatorScreen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:hint="@string/calculator"
                android:maxWidth="60dp"
                android:maxHeight="60dp"
                android:maxLength="40"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/btnDel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:contentDescription="@string/backspace"
                android:src="@drawable/backspace"
                android:text="@string/backspace"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMod"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/modulus"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="#191919"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSqrRoot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="#191919"
                android:text="@string/sqrRoot"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"

            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="#191919"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFour"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSix"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="#191919"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOne"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTwo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnThree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="#191919"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="#c41442"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>